"#9 wrote new openAPI spec for get request, implemented logic and wrote tests"
