# app/src/main/java/com/account/service/AccountRoleValidator.java
@@ -1,6 +1,7 @@
 package com.account.service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 import org.springframework.stereotype.Service;
@@ -22,6 +23,21 @@ public class AccountRoleValidator {
     private final AccountRoleRepository accountRoleRepository;
 
     private final AccountRepository accountRepository;
+
+    public void validateAccountRoleGetRequest (UUID accountID, String role) {
+        if (!accountRepository.existsById(accountID)) {
+            throw new NotFoundException("no account with that ID exists!");
+        }
+        else {
+            Optional<AccountRole> accountRole = accountRoleRepository.findByAccountIDAndRole(accountID, role);
+            if (accountRole.isEmpty()) {
+                throw new NotFoundException("No account with that ID and role exists!");
+            }
+            else if (StatusEnum.REVOKED.toString().equals(accountRole.get().getStatus())) {
+                throw new NotFoundException("Account with that role has been revoked!");
+            }
+        }
+    }
 
     public void validateAccountRoleRequestData(UUID accountID, AccountRoleRequestModel accountRoleRequestModel) {
         Boolean accountExists = accountRepository.existsById(accountID);
